# cashier_workstation

./: CMakeLists.txt  README.md  build.sh  cashier_workstation
data/: products.json
include/: cash_register.h  cashier_shift.h  json_utils.h  product.h  receipt.h
src/: cash_register.cpp  cashier_shift.cpp  json_utils.cpp  main.cpp  product.cpp  receipt.cpp
